[package]
name = "dmon-xdriver"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
redis = "0.22.1"
regex = "1.7.0"
serde = "1.0.148"
serde_json = "1.0.89"
log = "0.4.17"
log4rs = "1.2.0"
colored = "2.0.0"
crossbeam-channel = "0.5.6"

[dependencies.clap]
version = "4.0.29"
features = ["derive"]
